--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
       <div class="hours">
         <h3>営業時間</h3>
         <p><i class="far fa-clock"></i> 営業状況：営業中（予約制、対面クラス）</p>
-        <p><i class="fas fa-calendar-alt"></i> 月曜日～土曜日: 14:00～22:00</p>
+        <p><i class="fas fa-calendar-alt"></i> 月曜日～金曜日: 14:00～22:00</p>
         <p><i class="fas fa-calendar-alt"></i> 土曜日: 14:00～20:00</p>
         <p><i class="fas fa-calendar-alt"></i> 日曜日: 休業</p>
       </div>
@@ -532,3 +532,4 @@
   </script>
 </body>
 </html>
+
