--- a/index.html
+++ b/index.html
@@ -71,21 +71,21 @@
           <p><strong>伊藤 真一</strong>（臨床心理士・公認心理師）</p>
           <ul>
             <li>1971年生・浜松市出身／特技：大きい・元気系・くだらないギャグ</li>
-            <li>学歴：金沢大学 工学部 物質化学工学科</li>
-            <li>職歴：公立小中のスクールカウンセラー（現職）／病院精神科（非常勤・現職）</li>
-            <li>学会：日本心理臨床学会／日本描画療法学会／日本描画テスト・描画療法学会</li>
-            <li>資格：（財）日本習字 五段（教授免許）</li>
+            <li>学歴：金沢大学 工学部　佛教大学大学院教育学科研究修了</li>
+            <li>職歴：小中高スクールカウンセラー（現職）／病院精神科（過去）／看護専門学校心理学講師（現職）</li>
+            <li>学会：日本心理臨床学会／日本EMDR学会／日本描画テスト・描画療法学会／日本臨床動作学会</li>
+            <li>資格：臨床心理士、公認心理士、（財）日本習字 五段（教授免許）</li>
           </ul>
         </div>
 
                 <!-- 追加スタッフ -->
         <div class="service-category">
           <h3><i class="fas fa-user"></i> 指導員（絵画・アート／習字）</h3>
-          <p><strong>かずと 指導員</strong></p>
+          <p><strong>かずこ 指導員</strong></p>
           <ul>
-            <li>浜松市出身／特技：小動物を寝かしつける</li>
-            <li>現職：イラストレーター</li>
-            <li>資格：高等学校教諭免許（理科）、（財）日本習字 二段（中等師範）</li>
+            <li>浜松市出身</li>
+            <li>前職：イラストレーター</li>
+            <li>資格：公認心理士／絵画療法士／高等学校教諭免許（理科）／（財）日本習字　五段　（教授免許）</li>
           </ul>
         </div>
 
@@ -93,10 +93,9 @@
           <h3><i class="fas fa-user"></i> 指導員（学習・絵画・アート）</h3>
           <p><strong>あやか 指導員</strong></p>
           <ul>
-            <li>浜松市出身／特技：奇抜なアート作品を創りあげる</li>
-            <li>学歴：名古屋女子大学 文学部 児童教育学科</li>
-            <li>資格：幼稚園教諭免許／小学校教諭免許</li>
-            <li>リンク：まきやスタッフブログ</li>
+            <li>浜松市出身</li>
+            <li>前職：名古屋女子大学 文学部 児童教育学科</li>
+            <li>資格公認心理士／特別支援教育士／幼稚園教諭免許／小学校教諭免許</li>
           </ul>
         </div>
 
@@ -104,16 +103,16 @@
           <h3><i class="fas fa-user"></i> 学習指導員</h3>
           <p><strong>かわい 指導員</strong></p>
           <ul>
-            <li>1963年生・浜松市出身／特技：さわやかで優しい笑顔</li>
-            <li>学歴：静岡大学 工学部 金属化学科 → 同大学院 修士課程修了</li>
-            <li>職歴：東芝機械 技術部門 開発課 15年（材料開発）</li>
+            <li>浜松市出身</li>
+            <li>学歴：静岡大学工学部／同大学院修士課程修了</li>
+            <li>職歴：一部上場企業技術部門 開発課 15年（材料開発）</li>
           </ul>
         </div>
 
         <!-- スタッフ概要 -->
         <div class="service-category">
           <h3><i class="fas fa-user-friends"></i> スタッフ体制</h3>
-          <p>総勢 <strong>11名</strong>（公認心理師4名，特別支援教育士2名，描画療法士1名 他）</p>
+          <p>総勢 <strong>11名</strong>（臨床心理士1名、公認心理師4名，特別支援教育士2名，描画療法士1名 他）</p>
         </div>
       </div>
     </section>
@@ -532,4 +531,5 @@
   </script>
 </body>
 </html>
+
 
