--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
           <h3><i class="fas fa-user"></i> 代表</h3>
           <p><strong>伊藤 真一</strong>（臨床心理士・公認心理師）</p>
           <ul>
-            <li>1971年生・浜松市出身／特技：大きい・元気系・くだらないギャグ</li>
-            <li>学歴：金沢大学 工学部　佛教大学大学院教育学科研究修了</li>
+            <li>浜松市出身</li>
+            <li>学歴：金沢大学工学部卒／佛教大学大学院教育学科研究修了</li>
             <li>職歴：小中高スクールカウンセラー（現職）／病院精神科（過去）／看護専門学校心理学講師（現職）</li>
             <li>学会：日本心理臨床学会／日本EMDR学会／日本描画テスト・描画療法学会／日本臨床動作学会</li>
             <li>資格：臨床心理士、公認心理士、（財）日本習字 五段（教授免許）</li>
@@ -531,5 +531,6 @@
   </script>
 </body>
 </html>
+
 
 
