--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
                <!-- 代表（詳細を追記） -->
         <div class="service-category">
           <h3><i class="fas fa-user"></i> 代表</h3>
-          <p><strong>伊藤 真一</strong>（臨床心理士・公認心理師）</p>
+          <p><strong>伊藤 真一</strong></p>
           <ul>
             <li>浜松市出身</li>
-            <li>学歴：金沢大学工学部卒／佛教大学大学院教育学科研究修了</li>
+            <li>学歴：金沢大学工学部卒／佛教大学大学院教育学研究科修了</li>
             <li>職歴：小中高スクールカウンセラー（現職）／病院精神科（過去）／看護専門学校心理学講師（現職）</li>
-            <li>学会：日本心理臨床学会／日本EMDR学会／日本描画テスト・描画療法学会／日本臨床動作学会</li>
-            <li>資格：臨床心理士、公認心理士、（財）日本習字 五段（教授免許）</li>
+            <li>所属学会：日本心理臨床学会／日本EMDR学会／日本描画テスト・描画療法学会／日本臨床動作学会</li>
+            <li>資格：臨床心理士、公認心理師、（財）日本習字 五段（教授免許）</li>
           </ul>
         </div>
 
@@ -84,8 +84,9 @@
           <p><strong>かずこ 指導員</strong></p>
           <ul>
             <li>浜松市出身</li>
-            <li>前職：イラストレーター</li>
-            <li>資格：公認心理士／絵画療法士／高等学校教諭免許（理科）／（財）日本習字　五段　（教授免許）</li>
+            <li>職歴：イラストレーター</li>
+            <li>所属学会：日本心理臨床学会／日本描画テスト・描画療法学会</li>
+            <li>資格：公認心理士／認定描画療法士／高等学校教諭免許（理科）／（財）日本習字　五段　（教授免許）</li>
           </ul>
         </div>
 
@@ -94,8 +95,9 @@
           <p><strong>あやか 指導員</strong></p>
           <ul>
             <li>浜松市出身</li>
-            <li>前職：名古屋女子大学 文学部 児童教育学科</li>
-            <li>資格公認心理士／特別支援教育士／幼稚園教諭免許／小学校教諭免許</li>
+            <li>学歴：名古屋女子大学 文学部 児童教育学科</li>
+            <li>所属学会：日本心理臨床学会／日本LD学会</li>
+            <li>資格：公認心理士／特別支援教育士／幼稚園教諭免許／小学校教諭免許</li>
           </ul>
         </div>
 
@@ -532,6 +534,7 @@
   </script>
 </body>
 </html>
+
 
 
 
