--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <li>浜松市出身</li>
             <li>職歴：イラストレーター</li>
             <li>所属学会：日本心理臨床学会／日本描画テスト・描画療法学会</li>
-            <li>資格：公認心理士／認定描画療法士／高等学校教諭免許（理科）／（財）日本習字　五段　（教授免許）</li>
+            <li>資格：公認心理師／認定描画療法士／高等学校教諭免許（理科）／（財）日本習字　五段　（教授免許）</li>
           </ul>
         </div>
 
@@ -97,7 +97,7 @@
             <li>浜松市出身</li>
             <li>学歴：名古屋女子大学 文学部 児童教育学科</li>
             <li>所属学会：日本心理臨床学会／日本LD学会</li>
-            <li>資格：公認心理士／特別支援教育士／幼稚園教諭免許／小学校教諭免許</li>
+            <li>資格：公認心理師／特別支援教育士／幼稚園教諭免許／小学校教諭免許</li>
           </ul>
         </div>
 
@@ -534,6 +534,7 @@
   </script>
 </body>
 </html>
+
 
 
 
