--- a/index.html
+++ b/index.html
@@ -262,9 +262,8 @@
               <h4>絵画教室</h4>
               <p class="price">月4回 5,400円</p>
               <p class="affiliation">所属：日本描画テスト描画療法学会</p>
-              <p class="affiliation">内容：デッサンの基礎の指導、総合選抜型入試の対策のサポート。</p>
-              <p class="affiliation">安心・安全で否定されない体験をゆっくり積んでいく場所です。描く・作るなどの制作活動を通して「表現する」ことを目指します。
-美術系大学受験のご相談にも対応します。</p>
+              <p class="affiliation">内容：安心・安全で否定されない体験をゆっくり積んでいく場所です。描く・作るなどの制作活動を通して「表現する」ことを目指します。</p>
+              <p class="affiliation">デッサンの基礎指導、総合型入試の対策のサポートなど、美術系大学受験のご相談にも対応します。</p>
             </div>
             <div class="expression-service">
               <h4>習字教室</h4>
@@ -543,6 +542,7 @@
   </script>
 </body>
 </html>
+
 
 
 
